@startuml

title __WHERE's Class Diagram__\n

  package  {
    package edu.uark {
      package edu.uark.dataaccess.repository {
        package edu.uark.dataaccess.repository.helpers {
          package edu.uark.dataaccess.repository.helpers.where {
            class WhereClause {
                - tableName : String
                - fieldName : String
                {static} - SPACE : String
                {static} - OPEN_FUNCTION : String
                {static} - CLOSE_FUNCTION : String
                {static} - TABLE_FIELD_SEPARATOR : String
                {static} - PARAMETER_PLACEHOLDER : String
                + conditional()
                + postgreFunction()
                + table()
                + tableName()
                + fieldName()
                + comparison()
                + toString()
                + validate()
                + WhereClause()
            }
          }
        }
      }
    }
  }
  

  package  {
    package edu.uark {
      package edu.uark.dataaccess.repository {
        package edu.uark.dataaccess.repository.helpers {
          package edu.uark.dataaccess.repository.helpers.where {
            class WhereContainer {
                - additionalClauses : LinkedList<WhereClause>
                {static} - SPACE : String
                {static} - WHERE_PREAMBLE : String
                + addWhereClause()
                + toString()
                + WhereContainer()
            }
          }
        }
      }
    }
  }
  

  WhereClause o-- SQLConditionalType : conditional
  WhereClause o-- DatabaseTable : table
  WhereClause o-- PostgreFunctionType : postgreFunction
  WhereClause o-- SQLComparisonType : comparison
  WhereContainer o-- WhereClause : initialClause


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
